# EmotiEffLib

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: generate_documentation.yml  lint.yml  pytests.yml  tests.yml
docs/: Doxyfile  Doxyfile-cpp  Doxyfile-python  DoxygenLayout-cpp.xml  DoxygenLayout-project.xml  DoxygenLayout-python.xml  README.md
docs/tutorials/: README.md
docs/tutorials/cpp/: One image emotion recognition.ipynb  Predict emotions on video.ipynb  Predict engagement and emotions on video.ipynb  README.md
docs/tutorials/python/: One image emotion recognition.ipynb  Predict emotions on video.ipynb  Predict engagement and emotions on video.ipynb  README.md
emotieffcpplib/: .clang-format  .gitignore  CMakeLists.txt  README.md
emotieffcpplib/include/emotiefflib/: facial_analysis.h
emotieffcpplib/include/emotiefflib/backends/onnx/: facial_analysis.h
emotieffcpplib/include/emotiefflib/backends/torch/: facial_analysis.h
emotieffcpplib/src/: emotiefflib_onnx.cpp  facial_analysis.cpp
emotieffcpplib/src/backends/onnx/: facial_analysis.cpp
emotieffcpplib/src/backends/torch/: facial_analysis.cpp
emotieffcpplib/tests/: CMakeLists.txt  README.md  test_utils.cpp  tests_facial_analisys.cpp  tests_internal_methods.cpp
emotieffcpplib/tests/include/: test_utils.h
emotiefflib/: README.md  engagement_classification_model.py  facial_analysis.py  facial_emotions.py  utils.py
hsei/: __init__.py  facial_emotions.py
mobile_app/: to_pytorchlite.py  to_tflite.py
models/: prepare_models_for_emotieffcpplib.py  trace_torch_models.py
models/engagement_classification/: engagement_single_attention_converter.py
src/: convert_pt_to_onnx.py  facial_analysis.py
src/affectnet/: mobilefacenet.py
src/emotions_llm/: recognize_emotions_video.py
tests/: requirements.txt  test_emotions.py  test_facial_analysis.py  test_module_loading.py
training_and_examples/: README.md
training_and_examples/src/affectnet/: train_emotions-pytorch.ipynb
